# ml-test

./: .gitignore  README.md  docker-compose.airflow.yaml  docker-compose.mongo.yml  docker-compose.pg.yml  pyproject.toml  ruff.toml
classic_dl/: AE_and_VAE.ipynb  Base_NN.ipynb  CNN.ipynb  GNN.ipynb  Practice.ipynb  Regularization.ipynb  Transformer.ipynb
classic_ml/: Classification_and_nonlinear_models.ipynb  Decision_trees.ipynb  EDA.ipynb  Gradient_boosting.ipynb  Linear_models.ipynb
classic_ml/data/: customers.csv  mushrooms.csv
projects/: customer_support_regression.ipynb
